# Brian-Quantum-Agent-Robotics-Intelligence

./: CLAUDE.md  Cargo.toml  Dockerfile.brain  Dockerfile.robot  README.md  docker-compose.yml  pyproject.toml  requirements.txt
brian/: __init__.py
brian/communication/: brian_protocol.py
brian/core/: brian_mind.py
brian/core/memory/: __init__.py  memory_system.py
brian/hal/: robot_interface.py
brian/interface/: __init__.py  operator_interface.py
brian/motion/control/: __init__.py  motion_controller.py
brian/orchestrator/: __init__.py  brian_orchestrator.py
brian/perception/vision/: __init__.py  vision_pipeline.py
brian/quantum/: qvm_bridge.py
brian/safety/: safety_governor.py
brian_rs/: Cargo.toml
brian_rs/src/: lib.rs  orchestrator.rs  protocol_codec.rs  safety_monitor.rs  task_queue.rs  watchdog.rs
config/: brian_default.yaml
config/safety/: safety_limits.yaml
proto/: brian_msgs.proto  brian_service.proto
