[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brian-qari"
version = "0.1.0"
description = "Brian-QARI: Quantum Agent Robotics Intelligence - A universal quantum AI brain for humanoid robots"
readme = "README.md"
license = {text = "Proprietary"}
requires-python = ">=3.11"
authors = [
    {name = "Brion Quantum", email = "contact@brionquantum.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    # Core ML/AI (local-first, no cloud required)
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "torch>=2.2.0",
    "transformers>=4.40.0",
    "networkx>=3.2",

    # Quantum Computing (open-source, local simulation)
    "qiskit>=1.0.0",
    "qiskit-aer>=0.14.0",
    "cirq-core>=1.3.0",
    "pennylane>=0.35.0",

    # Communication
    "grpcio>=1.62.0",
    "grpcio-tools>=1.62.0",
    "protobuf>=4.25.0",

    # Computer Vision
    "opencv-python>=4.9.0",

    # Encryption & Security
    "cryptography>=42.0.0",

    # Utilities
    "pyyaml>=6.0",
    "pydantic>=2.6.0",

    # Async
    "asyncio-mqtt>=0.16.0",
]

[project.optional-dependencies]
# GPU acceleration (NVIDIA)
gpu-nvidia = [
    "torch[cuda]>=2.2.0",
    "pennylane-lightning-gpu>=0.35.0",
]

# GPU acceleration (AMD ROCm)
gpu-amd = [
    "torch-rocm>=2.2.0",
]

# Distributed training (DeepSpeed for local multi-GPU)
deepspeed = [
    "deepspeed>=0.14.0",
    "mpi4py>=3.1.0",
]

# Full perception pipeline
perception = [
    "ultralytics>=8.1.0",
    "open3d>=0.18.0",
    "openai-whisper>=20231117",
]

# ROS 2 integration
ros2 = [
    "rclpy>=4.0.0",
]

# Simulation
simulation = [
    "mujoco>=3.1.0",
    "gymnasium>=0.29.0",
]

# Development
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

# Everything
all = [
    "brian-qari[gpu-nvidia,deepspeed,perception,simulation,dev]",
]

[tool.setuptools.packages.find]
include = ["brian*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
