[package]
name = "brian-rs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Real-time orchestration, safety monitoring, and protocol codec for Brian-QARI"

[dependencies]
# Async runtime
tokio = { version = "1.36", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prost = "0.12"              # Protocol Buffers
prost-types = "0.12"

# gRPC
tonic = "0.11"

# TLS/Crypto
ring = "0.17"               # HMAC-SHA256, secure random
rustls = "0.22"             # TLS 1.3

# Time
chrono = { version = "0.4", features = ["serde"] }

# Concurrency
parking_lot = "0.12"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Utilities
thiserror = "1.0"
uuid = { version = "1.7", features = ["v4"] }
bytes = "1.5"

[build-dependencies]
tonic-build = "0.11"

[lib]
name = "brian_rs"
path = "src/lib.rs"
